# row-following

./: .gitignore  README.md  row-following.repos
IsaacSimulation/Simulation/: new_sim.usda  persun_isaac.usd  persun_pravi.usdc  persun_scaled.usda  sim_backup.usda  sim_new.usda  test_simulation.usda
IsaacSimulation/meshes/: mobile_base.stl
IsaacSimulation/spesbot/: spesbot.usda
IsaacSimulation/src/: spawn_plants.py
IsaacSimulation/urdf/: spesbot.urdf
Simulation/: persun.usda  persun_scaled.usda  sim.usda  sim_2.usd  sim_new.usda
follow_row_msgs/: CMakeLists.txt  package.xml
follow_row_msgs/action/: FollowRow.action
ml/resources/: data.yaml
ml/scripts/: train.py
ros2_ws/: .gitignore
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/row_following_py_pkg/lib/row_following_py_pkg/: randomize_node  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/row_following_py_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/row_following_py_pkg/row_following_py_pkg/: image_resizing.py  image_subscriber.py  main_node.py  new_node.py  randomize_node.py  row_follow.py  semantic_image_subscriber.py
ros2_ws/src/spes_robot_bringup_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/spes_robot_bringup_pkg/launch/: launch_nodes.launch.py
row_following_behavior/: CMakeLists.txt  package.xml
row_following_behavior/behaviors/: behaviors.btproj  test.xml
row_following_behavior/include/row_following_behavior/: follow_path_action_node.hpp  follow_row_action_node.hpp  follow_row_topic_node.hpp  generate_path_service_node.hpp  is_out_of_field_condition_node.hpp
row_following_behavior/src/: behavior.cpp  generate_path.cpp
row_following_bringup/: CMakeLists.txt  package.xml
row_following_bringup/launch/: bringup_launch.py  complete_launch.py  nav2_bringup_launch.py
row_following_bringup/resource/: nav2params.yaml
row_following_bringup/scripts/: hough_transform.py  hought_transform.py  main_node.py  nav2_test.py  navsatfix2tf.py  row_follow.py  row_follow_bt.py  tf2navsatfix.py  vide_publisher.py  video_publisher.py
row_following_isaac/data/USDs/: persun_scaled.usda  sim.usda  simulation.usda  test_simulation.usda
row_following_isaac/data/scripts/: isaac_randomize_cam_pos.py  isaac_spawn_plants.py  randomize_cam_pos.py  spawn_plants.py
row_following_isaac/scripts/: dataset_generator.py
row_following_msgs/: CMakeLists.txt  package.xml
row_following_msgs/srv/: GeneratePath.srv
row_following_py_pkg/row_following_py_pkg/: main_node.py  row_follow.py
src/: isaac_randomize_cam_pos.py  randomize_cam_pos.py  spawn_plants.py
(+5 files in other folders)
